<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <!-- Añade tus variables de binding aquí si es necesario -->
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Toolbar -->
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background"
            android:elevation="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:title="@string/title_add_order" />

        <!-- NestedScrollView para hacer scroll del contenido -->
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="4dp">

                <!-- Spinner y otros elementos que no necesitan scroll por sí mismos -->
                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="15dp"
                    android:paddingTop="4dp"
                    android:text="Tipo:" />

                <Spinner
                    android:id="@+id/spinnerTypeOrder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="15dp"
                    android:paddingTop="4dp" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="15dp"
                    android:paddingTop="4dp"
                    android:text="Estado:" />

                <Spinner
                    android:id="@+id/spinnerStatusOrder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="15dp"
                    android:paddingTop="4dp" />

                <TextView
                    android:id="@+id/totalOrder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="15dp"
                    android:paddingTop="4dp"
                    android:text="Total" />

                <!-- Sección de Artículos y botón -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="4dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingStart="15dp"
                        android:paddingTop="4dp"
                        android:text="Artículos: " />

                    <Button
                        android:id="@+id/btnAddArticle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/nav"
                        android:elevation="10dp"
                        android:text="@string/btn_add" />
                </LinearLayout>

                <!-- RecyclerView con altura dinámica para que permita el scroll -->
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_articles"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:nestedScrollingEnabled="false" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btnCancelOrder"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="4dp"
                        android:layout_weight="1"
                        android:backgroundTint="@color/danger"
                        android:text="@string/btn_cancel" />

                    <Button
                        android:id="@+id/btnConfirmOrder"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:backgroundTint="@color/success"
                        android:text="@string/btn_save" />
                </LinearLayout>

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>